<resources>
    <string name="app_name">RestoNPE</string>
    <string name="slogan">Food always within reach.</string>
    <string name="about_app">Thank you for using our App RestoNPE. Our delicious intention was to bring food closer to you and help you make the most difficult decision of what to eat now.</string>
    <string name="welcome">Welcome</string>

    <string name="close">Close</string>
    <string name="unsaved">Unsaved Changes</string>
    <string name="not_saved">The information are not saved, do you want to discard the changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="setting_saved">Changes have been saved.</string>
    <string name="incomplete">Cannot save, please fill in all the fields</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- author strings -->
    <string name="cindy">Uen Yi Hung</string>
    <string name="jeegna">Jeegna Patel</string>
    <string name="danieil">Danieil Skrinikov</string>
    <string name="thaivu">Thai Vu Nguyen</string>
    <string name="haugilles">Hau Gilles Che</string>

    <string name="cindy_info">Grad Dawson CS 2017\n\nUen Yi aka Cindy is a person where, the more you know her, the more you realize that she is just a violent crazy cat lady who sometimes can not keep her mouth shut from rambling nonsense.</string>
    <string name="danieil_info">Grad Dawson CS 2017\n\nDanieil is the type of person who likes to take a big part of the project by himself, but ultimately forgets that he has a Chemistry class and ends up pulling all&#8211;nighters to be done in time.</string>
    <string name="jeegna_info">Grad Dawson CS 2017\n\nProgrammer by day, batman by night.</string>
    <string name="thaivu_info">Grad Dawson CS 2017\n\nThai Vu is an overfed cat, that obviously spent too much time in restaurants.</string>
    <string name="haugilles_info">Grad Dawson CS 2017\n\nBiggest troll in Dawson\'s 3rd Computer Science. Worships another Computer Science student on a daily basis.</string>

    <!-- general activity names-->
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_restos_near">Nearby Restaurant</string>
    <string name="title_activity_search_restos">Find a Restaurant</string>
    <string name="title_activity_restos_add">Add a Restaurant</string>
    <string name="title_activity_restos_fav">Favorites</string>
    <string name="title_activity_show_restos">Restaurant</string>
    <string name="title_activity_find_from_somewhere">Find Resto from Somewhere</string>
    <string name="title_activity_edit_resto">Modify Restaurant</string>

    <string name="action_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_dawson">Dawson College</string>
    <string name="action_fav">Favorites</string>
    <string name="action_heroku">Sync</string>
    <string name="title_heroku">Heroku</string>

    <string name="course_id">420&#8211;518&#8211;DW Mobile</string>

    <!-- Calculator -->
    <string name="tip_10">10%</string>
    <string name="tip_15">15%</string>
    <string name="tip_20">20%</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="subtotal">Bill Subtotal $</string>
    <string name="hint_dollar">0.00</string>
    <string name="tip_default">15</string>
    <string name="tip_percent">Tip Percentage %</string>
    <string name="num_person">No. of People</string>
    <string name="person_default">1</string>
    <string name="tip_amount">Total Tip $</string>
    <string name="amount_person">Each Person Pays $</string>
    <string name="grand_total">Grand Total $</string>

    <!-- setting -->
    <string name="username">Username</string>
    <string name="email">Email Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="save">Save</string>
    <string name="discard">Discard changes?</string>

    <!-- geo stuff -->
    <string name="location_not_found">Location not found</string>
    <string name="latitude">Latitude: %1$s</string>
    <string name="longitude">Longitude: %1$s</string>

    <!-- error message -->
    <string name="no_result">No results found.</string>

    <!-- Add Resto Strings -->
    <string name="restaurant">Restaurant</string>
    <string name="resto_address">Restaurant address</string>
    <string name="resto_address_hint">Address*</string>
    <string name="resto_name_hint">Restaurant name*</string>
    <string name="resto_genre_hint">Genre</string>
    <string name="resto_price_range_hint">Price Range</string>
    <string name="resto_city_hint">City*</string>
    <string name="resto_province_hint">Province*</string>
    <string name="resto_postal_hint">Postal Code*</string>
    <string name="resto_country_hint">Country*</string>
    <string name="resto_phone_hint">Phone</string>
    <string name="resto_email_hint">Email</string>
    <string name="resto_link_hint">Link</string>
    <string name="add_resto">Add Restaurant</string>
    <string name="resto_contact">Contact</string>
    <string name="required">* indicates required field</string>
    <string name="info">Info</string>


    <string name="added">Favorited</string>
    <string name="removed">Unfavorited</string>
    <string name="remove">Unfavorite</string>
    <string name="confirm_remove">Remove restaurant from favorites?</string>

    <!-- Add Resto Errors -->
    <string name="name_error">Restaurant name is required</string>
    <string name="address_error">Hint: 3040, Sherbrooke West</string>
    <string name="city_error">City is required</string>
    <string name="province_error">Province is required</string>
    <string name="postal_error">Postal code is required</string>
    <string name="country_error">Country is required</string>
    <string name="email_error">Not a valid email</string>
    <string name="no_dial">Unable to dial phone number.</string>

    <!-- Login/Register related strings -->
    <string name="login_email">Email</string>
    <string name="login_name">Name</string>
    <string name="login_password">Password</string>
    <string name="login_password_confirmation">Confirm password</string>
    <string name="login_button">LOGIN</string>
    <string name="register_button">REGISTER</string>
    <string name="login_email_error">Must provide email</string>
    <string name="login_name_error">Must provide name</string>
    <string name="login_password_error">Must provide password</string>
    <string name="login_password_error_nonmatch">Passwords are not the same</string>
    <string name="login_authen_error">Invalid username or password.</string>
    <string name="login_authen_postal_error">Invalid postal code.</string>
    <string name="login_wait">Please wait. Login in...</string>
    <string name="register_wait">Registration in progress...</string>
    <string name="register_email_taken">Email is taken</string>
    <string name="register_name_taken">Name is taken</string>

    <!--Search restos-->
    <string name="search_name">Name</string>
    <string name="search_city">City</string>
    <string name="search_cuisines">Cuisine</string>
    <string name="search_no_cuisines">No Cuisines Found</string>
    <string name="search_button">Search</string>
    <string name="currency">$</string>

    <!--Search resto error -->
    <string name="search_no_location">The city was not found. Please</string>

    <!--Show resto errors-->
    <string name="show_phone_error">No phone number was found</string>
    <string name="show_review_error">No reviews were found</string>
    <string name="show_resto_invalid_creds">Invalid credentials</string>

    <!--Show Review-->
    <string name="review_submitter">Submitted by: %1$s</string>
    <string name="review_likes">Likes: %1$d</string>
    <string name="review_rating">Rating: %1$f</string>
    <string name="review_add">Add Review</string>

    <!--Add review-->
    <string name="add_review_title">Title</string>
    <string name="add_review_content">Content</string>
    <string name="add_review_valid">Review added!</string>
    <string name="add_review_invalid">Could not add review</string>

    <!--RestoAdapter id codes-->
    <string name="local_id_code">local id</string>
    <string name="zomato_id_code">zomato id</string>
    <string name="heroku_id_code">heroku id</string>

    <!--ReviewAdapter id codes-->
    <string name="review_id_code">review id</string>
    <string name="review_title_code">review title</string>
    <string name="review_content_code">review content</string>
    <string name="review_rating_code">review rating</string>
    <string name="review_submitter_code">review submitter</string>
    <string name="review_submitter_email_code">review submitter email</string>
    <string name="review_likes_code">review likes</string>
    <string name="review_resto_id_code">resto id</string>

    <!-- heroku -->
    <string name="sync">Sync Completed</string>
    <string name="failed">Sync Failed</string>
</resources>
