<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/action_about" />
        <item
            android:id="@+id/dawson"
            android:icon="@drawable/ic_menu_school"
            android:title="@string/action_dawson" />
        <item
            android:id="@+id/tip"
            android:icon="@drawable/ic_menu_tip"
            android:title="@string/tip_calculator" />
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/action_settings" />
    </group>
</menu>
