<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="npe.com.restonpe.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo_transparent_144" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">
        <!-- Email -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Login_only"
            app:errorTextAppearance="@style/error_login">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <!-- Name -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/nameLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Login_only"
            app:errorTextAppearance="@style/error_login">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_name"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <!-- Password -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordLbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Login_only"
            app:errorTextAppearance="@style/error_login">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="attemptLogin"
            android:text="@string/login_button"
            android:textColor="#fff" />
    </LinearLayout>

</LinearLayout>
